2014-10-19  Ilya Verbin  <ilya.verbin@intel.com>

	* configure: Regenerate.
	* configure.ac: Move the test for section attribute specifier "e" in GAS
	out to all i[34567]86-*-* | x86_64-*-* targets and add --fatal-warnings.
	* langhooks.c (lhd_begin_section): Set SECTION_EXCLUDE flag.
	* varasm.c (default_elf_asm_named_section): Guard SECTION_EXCLUDE with
	ifdef HAVE_GAS_SECTION_EXCLUDE.

2014-10-19  Andreas Schwab  <schwab@linux-m68k.org>

	* doc/md.texi (RTL Template) [match_scratch]: Correct equivalent
	match_operand expression.

2014-10-19  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
	    David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/rs6000.c (rs6000_atomic_assign_expand_fenv): New
	function.
	(TARGET_ATOMIC_ASSIGN_EXPAND_FENV): New define.

2014-10-18  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	* doc/invoke.texi (Options to Request or Suppress Warnings):
	Explain options precedence.
	(Wtrampolines): Do not indent paragraph.

2014-10-18  John David Anglin  <danglin@gcc.gnu.org>

	* doc/invoke.texi: Update documentation of hppa -mjump-in-delay option.
	* config/pa/pa-protos.h (pa_following_call): Delete declaration.
	(pa_jump_in_call_delay): Likewise.
	* config/pa/pa.c (pa_option_override): Remove jump in call delay
	override.
	(pa_output_millicode_call): Remove support for jump in call delay.
	(pa_output_call): Likewise.
	(pa_jump_in_call_delay): Delete.
	(pa_following_call): Likewise.
	* config/pa/pa.md (in_call_delay): Remove jump in delay check.
	(uncond_branch): Remove following call check from attribute length.

2014-10-18  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/53513
	* config/sh/sh-modes.def (PSI): Remove.
	* config/sh/sh-protos.h (get_fpscr_rtx): Remove.
	* config/sh/sh.c (fpscr_rtx, get_fpscr_rtx): Remove.
	(sh_reorg): Remove commented out FPSCR code.
	(fpscr_set_from_mem): Use SImode instead of PSImode.  Emit lds_fpscr
	insn instead of move insn.
	(sh_hard_regno_mode_ok): Return SImode for FPSCR.